# power_analysis

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
power_analysis/: Examples.py  PanelBoostrapObs.py  square.py  test_PanelBoot.py  test_square.py
src/: power_analysis.py
