[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Rodrigo Franco <franc703@umn.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = "^1.24.3"
scipy = "^1.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
