[tool.poetry]
name = "power_analysis"
version = "0.1.5"
description = "This package allows you to perform power analysis computations"
license = "MIT"
authors = ["Rodrigo Franco <franc703@umn.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
numpy = ">=1.16.5, <1.23.0"
scipy = ">=1.7.2,<=1.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
